I tried to correct all the comments